update to styling, overflow off screen hidden

--- a/bpa-website/index.html
+++ b/bpa-website/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
     <script src="script-2.js" defer></script>
     <script>
-        var screenWidth = window.innerWidth;
+        var screenWidth = "100%";
         var screenHeight = window.innerHeight;
     </script>
 
