--- a/bpa-website/index.html
+++ b/bpa-website/index.html
@@ -73,7 +73,7 @@
         </div>
             <div class="row">
                 <div class="col-lg-12" id="inform-col" style="padding-left: 0 !important;">
-                    <div id="inform-container" class="col-lg-6">
+                    <div id="inform-container" class="col-lg-6 col-md-6 col-sm-6 col-10">
                         <svg id="inform-svg" class="img-responsive center-block" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="70%" height="70%"
                             viewBox="0 0 172 172" style=" fill:#000000;">
                             <defs>
@@ -109,7 +109,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12" id="inform-col" style="padding-left: 0 !important;">
-                    <div id="inform-container" class="col-lg-6">
+                    <div id="inform-container" class="col-lg-6 col-md-6 col-sm-6 col-10">
                         <svg id="inform-svg" class="inform-svg-1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
 width="60%" height="60%"
 viewBox="0 0 172 172"
