--- a/bpa-website/index.html
+++ b/bpa-website/index.html
@@ -47,7 +47,7 @@
         <div id="section2" class="container container-sm" style='padding-right: unset !important'>
             <div id="info-row-1" class="row">
                 <div class="col-2"></div>
-                <div id="" class="col-8" data-sr-id="5"
+                <div id="" class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-11" data-sr-id="5"
                     style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 1.2s cubic-bezier(0.5, 0, 0, 1) 0s, transform 1.2s cubic-bezier(0.5, 0, 0, 1) 0s;">
                     <div class="info-grid">
                         <p class="h1 info-title" id="small-2">What is a carbon footprint?</p>
@@ -59,7 +59,7 @@
             </div>
             <div id="info-row-1" class="row">
                 <div class="col-2"></div>
-                <div id="" class="col-8" data-sr-id="5"
+                <div id="" class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-11" data-sr-id="5"
                     style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: opacity 1.2s cubic-bezier(0.5, 0, 0, 1) 0s, transform 1.2s cubic-bezier(0.5, 0, 0, 1) 0s;">
                     <div class="info-grid">
                         <p class="h1 info-title" id="small-1">What does it affect?</p>
