--- a/bpa-website/index.html
+++ b/bpa-website/index.html
@@ -69,7 +69,7 @@
                 <div class="col-2"></div>
             </div>
             <div class="row">
-            <h1 id="title">What can I do?</h1>
+            <p class="h2" id="title">What can I do?</p>
         </div>
             <div class="row">
                 <div class="col-lg-12" id="inform-col" style="padding-left: 0 !important;">
