--- a/bpa-website/nav.html
+++ b/bpa-website/nav.html
@@ -2,15 +2,16 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<link href="https://res.cloudinary.com/dr6lvwubh/raw/upload/v1581441981/Anicons/anicons-regular.css" rel="stylesheet">
 <script src="ios-theme.js" defer></script>
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="anicons-regular.css">
+<div class="nav-container">
 <nav id="nav" class="navbar navbar-expand-lg navbar-dark bg-primary">
     <a class="navbar-brand" href="#">
         <img src="logo-1.png" width="100" height="auto" class="d-inline-block align-top" alt="">
         
       </a>    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <div class=”icon”>A</div>
+        <div class="icon">A</div>
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -30,3 +31,4 @@
       </ul>
     </div>
   </nav>
+</div>
