--- a/bpa-website/index.html
+++ b/bpa-website/index.html
@@ -10,6 +10,7 @@
         <title>Lower Your Carbon Emmisions</title>
         <link rel="stylesheet" href="./style.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
         <script src="script-2.js" defer></script>
         <script>
             var screenWidth = "100%";
@@ -23,7 +24,17 @@
     </head>
 
     <body draggable="false">
+        <!--Navigation bar-->
+<div id="nav-placeholder">
 
+</div>
+
+<script>
+$(function(){
+  $("#nav-placeholder").load("nav.html");
+});
+</script>
+<!--end of Navigation bar-->
 
         <div class="align-items-center">
             <div class="row">
