--- a/bpa-website/index.html
+++ b/bpa-website/index.html
@@ -5,8 +5,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="theme-color" content="#33a69c" media="(prefers-color-scheme: light)">
-        <meta name="theme-color" content="#0c3b39" media="(prefers-color-scheme: dark)">
+        <meta name="theme-color" content="#007bff" media="(prefers-color-scheme: light)">
+        <meta name="theme-color" content="#007bff" media="(prefers-color-scheme: dark)">
         <title>Lower Your Carbon Emmisions</title>
         <link rel="stylesheet" href="./style.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
