Update Added New Nav Bar Styling

--- a/bpa-website/index.html
+++ b/bpa-website/index.html
@@ -12,6 +12,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
         <script src="script-2.js" defer></script>
+        <script src="ios-theme.js" defer></script>
         <script>
             var screenWidth = "100%";
             var screenHeight = window.innerHeight;
